# stoat

./: CMakeLists.txt
.ccls-cache/@@home@jackdaw@GitHub@stoat/: @include@c++@15.1.1@algorithm.blob  @include@c++@15.1.1@array.blob  @include@c++@15.1.1@atomic.blob  @include@c++@15.1.1@backward@auto_ptr.h.blob  @include@c++@15.1.1@backward@binders.h.blob  @include@c++@15.1.1@bit.blob  @include@c++@15.1.1@bits@algorithmfwd.h.blob  @include@c++@15.1.1@bits@align.h.blob  @include@c++@15.1.1@bits@alloc_traits.h.blob  @include@c++@15.1.1@bits@allocated_ptr.h.blob  @include@c++@15.1.1@bits@allocator.h.blob  @include@c++@15.1.1@bits@atomic_base.h.blob  @include@c++@15.1.1@bits@atomic_lockfree_defines.h.blob  @include@c++@15.1.1@bits@basic_string.h.blob  @include@c++@15.1.1@bits@basic_string.tcc.blob  @include@c++@15.1.1@bits@char_traits.h.blob  @include@c++@15.1.1@bits@charconv.h.blob  @include@c++@15.1.1@bits@chrono.h.blob  @include@c++@15.1.1@bits@concept_check.h.blob  @include@c++@15.1.1@bits@cpp_type_traits.h.blob  @include@c++@15.1.1@bits@cxxabi_forced.h.blob  @include@c++@15.1.1@bits@cxxabi_init_exception.h.blob  @include@c++@15.1.1@bits@erase_if.h.blob  (+554 more)
lib/: CMakeLists.txt  stoatuiexport.h
lib/app/: mainwindow.cpp  mainwindow.hpp  stapplication.cpp  stapplication.h
lib/componentmanager/: canvas.cpp  canvas.hpp  componentmanager.hpp
lib/menubar/: menubar.cpp  menubar.hpp
lib/qtsingleapplication/: qtlocalpeer.cpp  qtsingleapplication.cpp
lib/sidebar/: sidebar.hpp
lib/viewport/: glviewport.cpp  glviewport.hpp  openglwindow.cpp
src/: CMakeLists.txt  main.cpp
(+126 files in other folders)
